<?xml version="1.0"?>
<package format="2">
  <name>gnss_localizer</name>
  <version>0.1.0</version>
  <description>GNSS to map-frame pose conversion nodes (nmea2tfpose, fix2tfpose) with local coordinate transforms.</description>

  <maintainer email="you@example.com">Sheng-Hua Chen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>nmea_msgs</depend>

  <export>
  </export>
</package>
